[package]
name = "tui-text"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/brendon-felix/tui-text"
keywords = ["ratatui", "tui", "editor", "text", "vim"]
description = "Text entry widget for ratatui"
authors = ["Brendon Felix <brendon.felix.c@gmail.com>"]
license = "MIT"

[dependencies]
ratatui = { package = "ratatui", version = "0.29", features = ["unstable"] }
jagged = { package = "edtui-jagged", version = "0.1" }
enum_dispatch = "0.3.12"
arboard = { version = "3.3.0", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
unicode-width = "0.2.0"
once_cell = { version = "1", optional = true }

[features]
default = ["arboard"]
arboard = ["dep:arboard"]
mouse-support = [] # experimental
